--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,6 @@
     "concurrently": "^4.1.0"
   },
   "scripts": {
-    "client": "cd client && yarn start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "server": "nodemon server.js"
   }
 }
