--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
@@ -24,5 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://backend:5000/"
 }
