--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@ DEV_WEBSOCKET_PORT=35729
 APP_PORT=80
 BACKEND_PORT=5000
 FRONTEND_PORT=3000
+
 MARIADB_PORT=3306
+MARIADB_ROOT_PASSWORD=changeme
+MARIADB_USERNAME=river_log
+MARIADB_PASSWORD=changeme
+MARIADB_DATABASE=river_log
+
