--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "db-migrate": "^0.11.5",
     "db-migrate-mysql": "^1.1.10",
     "express": "^4.16.4",
-    "mariadb": "^2.0.3"
+    "mariadb": "^2.0.3",
+    "redis": "^2.8.0"
   },
   "scripts": {
     "server": "nodemon server.js"
