db migrate as global install for container

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-stretch
 
-RUN npm install -g -s yarn nodemon
+RUN npm install -g -s yarn nodemon db-migrate
 
 RUN mkdir -p /usr/src/backend
 WORKDIR /usr/src/backend
