remove logs, migrate script

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,4 +12,4 @@ ENV CHOKIDAR_USEPOLLING true
 
 RUN yarn install
 
-ENTRYPOINT yarn db-migrate up && yarn server
+ENTRYPOINT yarn migrate && yarn server
