--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   backend:
     container_name: river-status-backend
     build: ./backend
-    command: yarn server
+    command: yarn dev
     ports:
       - ${BACKEND_PORT}:${BACKEND_PORT}
     volumes:
@@ -14,6 +14,8 @@ services:
       - mariadb
       - redis
     environment:
+      PRODUCTION: 'false'
+      CHOKIDAR_USEPOLLING: 'true'
       MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
       MARIADB_DATABASE: ${MARIADB_DATABASE}
       MARIADB_USER: ${MARIADB_USERNAME}
@@ -37,6 +39,7 @@ services:
     depends_on:
       - backend
     environment:
+      CHOKIDAR_USEPOLLING: 'true'
       API_PORT: ${BACKEND_PORT}
 
   # mariadb
