--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,6 +7,7 @@ services:
     environment:
       PRODUCTION: 'true'
       CHOKIDAR_USEPOLLING: 'false'
+      REDIS_KEEP_RIVER_TIME: 3600
 
   # production react frontend container
   frontend:
