--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {},
-  "devDependencies": {
-    "concurrently": "^4.1.0"
-  },
+  "devDependencies": {},
   "scripts": {
     "install-backend": "cd backend && yarn install",
     "install-frontend": "cd frontend && yarn install",
-    "postinstall": "yarn install-backend && yarn install-frontend",
-    "client": "cd frontend && yarn start",
-    "server": "cd backend && yarn server",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "postinstall": "yarn install-backend && yarn install-frontend"
   }
 }
