--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ APP_PORT=80
 BACKEND_PORT=5000
 FRONTEND_PORT=3000
 
+SESSION_SECRET=secretsession
+
 MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=changeme
 MARIADB_USERNAME=river_log
