--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,14 @@
     "db-migrate": "^0.11.5",
     "db-migrate-mysql": "^1.1.10",
     "express": "^4.16.4",
+    "express-auth-route": "^1.1.0",
+    "express-session": "^1.15.6",
+    "https": "^1.0.0",
     "mariadb": "^2.0.3",
-    "redis": "^2.8.0"
+    "passport": "^0.4.0",
+    "redis": "^2.8.0",
+    "session-file-store": "^1.2.0",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "dev": "db-migrate up && nodemon server.js",
